const List<String> exercises = [
  'Barbell row',
  'Bench press',
  'Shoulder press',
  'Deadlift',
  'Squat'
];

class AppStrings {
  static const String exerciseLabel = 'Exercise';
  static const String weightLabel = 'Weight (kg)';
  static const String repetitionsLabel = 'Repetitions';
  static const String exerciseDropdownHint = 'Select an exercise';
  static const String saveWorkout = 'Save Workout';
  static const String addWorkout = 'Add Workout';
  static const String addSet = 'Add Set';
  static const String updateSet = 'Update Set';
  static const String workoutTitle = 'Add/Edit Workout';
  static const String weightEmpty = 'Please enter the weight';
  static const String weightValid = 'Enter a valid weight';
  static const String repsEmpty = 'Please enter the weight';
  static const String repsValid = 'Enter a valid weight';
  static const String exerciseEmpty = 'Please select an exercise';
  static const String saveButtonLabel = 'Save Workout';
  static const String workoutValidMessage = 'Workout created successfully!';
  static const String workoutInvalidMessage = 'Please add at least one set';
  static const String workoutUpdateMessage = 'Workout updated successfully!';
  static const String noWorkoutSaved = 'No workouts saved';
  static const String workoutDeleted = 'Workout deleted';
  static const String workoutDetail = 'Workout Detail';
  static const String workoutBox = 'workoutsBox';
  static const String workoutName = 'Workout';
  static const String textEdit = 'Edit';
  static const String textDelete = 'Delete';
}
